# simple_search_engine

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt  indexer.cpp  indexer.h  indexer_main.cpp  search.cpp  search.h  search_main.cpp
test_dir/dir1/: cat  fruits  lemon
test_dir/dir2/: lemon_cat  many_tests  some_test
test_dir/dir3/: test_lemon
tests/: CMakeLists.txt  tests.cpp
